--- a/transport_launcher/package.xml
+++ b/transport_launcher/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>miranda_transport_launcher</name>
+  <name>transport_launcher</name>
   <version>0.0.0</version>
-  <description>The miranda_transport_launcher package</description>
+  <description>The transport_launcher package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/miranda_transport_launcher</url> -->
+  <!-- <url type="website">http://wiki.ros.org/transport_launcher</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
