--- a/multi_robot_msgs/CMakeLists.txt
+++ b/multi_robot_msgs/CMakeLists.txt
@@ -1,23 +1,13 @@
-cmake_minimum_required(VERSION 2.8.3)
-project(multi_robot_controller)
+cmake_minimum_required(VERSION 3.0.2)
+project(multi_robot_msgs)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-add_compile_options(-std=c++11)
+# add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(
-  catkin REQUIRED COMPONENTS
-  geometry_msgs
-  multi_robot_msgs
-  nav_msgs
-  roscpp
-  tf  
-)
-find_package(Eigen3 REQUIRED)
-
-
+find_package(catkin REQUIRED COMPONENTS roscpp rospy geometry_msgs message_generation)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -53,11 +43,11 @@ find_package(Eigen3 REQUIRED)
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  State.msg
+  MetaData.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -74,10 +64,10 @@ find_package(Eigen3 REQUIRED)
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   geometry_msgs#   nav_msgs
-# )
+ generate_messages(
+   DEPENDENCIES
+   geometry_msgs  # Or other packages containing msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -109,9 +99,10 @@ find_package(Eigen3 REQUIRED)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES multi_robot_controller
-#  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp multi_robot_msgs
+#  INCLUDE_DIRS include
+#  LIBRARIES multi_robot_msgs
+  CATKIN_DEPENDS message_runtime
+#  DEPENDS system_lib
 )
 
 ###########
@@ -121,57 +112,24 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-  include
-  ${catkin_INCLUDE_DIRS}
-  ${Eigen_INCLUDE_DIRS}
+# include
+# ${catkin_INCLUDE_DIRS}
 )
+
 ## Declare a C++ library
+# add_library(${PROJECT_NAME}
+#   src/${PROJECT_NAME}/multi_robot_msgs.cpp
+# )
 
-add_library(multi_robot_controller
-
-  include/multi_robot_controller/constrained_rigid_motion.h
-  src/constrained_rigid_motion.cpp
-
-  include/multi_robot_controller/constrained_rigid_motion_ros.h
-  src/constrained_rigid_motion_ros.cpp
-
-  include/multi_robot_controller/constrained_rigid_motion_tf.h
-  src/constrained_rigid_motion_tf.cpp
-
-  include/multi_robot_controller/controller.h
-  src/controller.cpp
-
-  include/multi_robot_controller/pass_through_controller.hpp
-
-  include/multi_robot_controller/lyapunov_controller.h
-  src/lyapunov_controller.cpp
-)
-add_dependencies(multi_robot_controller ${catkin_EXPORTED_TARGETS})
-
-add_library(input_lib
-  include/${PROJECT_NAME}/input_base.hpp
-  include/${PROJECT_NAME}/input_odom.hpp
-  include/${PROJECT_NAME}/input_pose_twist.hpp
-  include/${PROJECT_NAME}/input_pose_odom.hpp
-  include/${PROJECT_NAME}/input_types.hpp
-)
-add_library(multi_robot_controller_exception
-  include/${PROJECT_NAME}/necessary_param_exeption.hpp
-)
-set_target_properties(input_lib PROPERTIES LINKER_LANGUAGE CXX)
-set_target_properties(multi_robot_controller_exception PROPERTIES LINKER_LANGUAGE CXX)
-
-add_dependencies(multi_robot_controller ${catkin_EXPORTED_TARGETS})
-
+## Add cmake target dependencies of the library
+## as an example, code may need to be generated before libraries
+## either from message generation or dynamic reconfigure
+# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(slave_node src/slave_node.cpp)
-add_executable(master_node src/master_node.cpp)
-add_executable(input_test src/tests/input_test.cpp)
-add_executable(rigid_motion_test src/tests/rigid_motion_test.cpp)
-add_executable(controller_test src/tests/controller_test.cpp)
+# add_executable(${PROJECT_NAME}_node src/multi_robot_msgs_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -184,35 +142,9 @@ add_executable(controller_test src/tests/controller_test.cpp)
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(multi_robot_controller
-  ${catkin_LIBRARIES}
-  ${eigen3_LIBRARIES}
-)
-
-target_link_libraries(slave_node
-  multi_robot_controller
-  ${catkin_LIBRARIES}
-)
-target_link_libraries(master_node
-  multi_robot_controller
-  ${catkin_LIBRARIES}
-)
-target_link_libraries(input_lib
-  ${catkin_LIBRARIES}
-)
-target_link_libraries(input_test
-  ${catkin_LIBRARIES}
-)
-target_link_libraries(rigid_motion_test
-  ${catkin_LIBRARIES}
-  multi_robot_controller
-)
-target_link_libraries(controller_test
-  ${catkin_LIBRARIES}
-  multi_robot_controller
-)
-
-
+# target_link_libraries(${PROJECT_NAME}_node
+#   ${catkin_LIBRARIES}
+# )
 
 #############
 ## Install ##
@@ -223,7 +155,7 @@ target_link_libraries(controller_test
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-# install(PROGRAMS
+# catkin_install_python(PROGRAMS
 #   scripts/my_python_script
 #   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 # )
@@ -261,7 +193,7 @@ target_link_libraries(controller_test
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_multi_robot_controller.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_multi_robot_msgs.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
