--- a/multi_robot_msgs/package.xml
+++ b/multi_robot_msgs/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>multi_robot_controller</name>
+  <name>multi_robot_msgs</name>
   <version>0.0.0</version>
-  <description>The multi_robot_controller package</description>
+  <description>The multi_robot_msgs package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="malte.heinrich@stud.uni-hannover.de">Malte Heinrich</maintainer>
+  <maintainer email="rosmatch@todo.todo">rosmatch</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/controller</url> -->
+  <!-- <url type="website">http://wiki.ros.org/multi_robot_msgs</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -49,14 +49,8 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>cmake_modules</build_depend>  
-  
-  <depend>roscpp</depend>
-  <build_depend>multi_robot_msgs</build_depend>  
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>nav_msgs</build_depend>
-
-  <doc_depend>doxygen</doc_depend>
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
