--- a/transport_controller/CMakeLists.txt
+++ b/transport_controller/CMakeLists.txt
@@ -158,7 +158,8 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
-  scripts/transport_state_machine_node.py
+  nodes/transport_state_machine_node
+  nodes/service_distributor_node
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
