Added python ps4 node to cmakelist

--- a/transport_controller/CMakeLists.txt
+++ b/transport_controller/CMakeLists.txt
@@ -158,8 +158,9 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
-  nodes/transport_state_machine_node
-  nodes/service_distributor_node
+  nodes/transport_state_machine_node.py
+  nodes/service_distributor_node.py
+  nodes/ps4_statemachine_controller.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
