Eigen no depend nescessary since header only

--- a/multi_robot_controller/CMakeLists.txt
+++ b/multi_robot_controller/CMakeLists.txt
@@ -114,7 +114,7 @@ catkin_package(
   INCLUDE_DIRS include
   LIBRARIES multi_robot_controller
   CATKIN_DEPENDS roscpp
-  DEPENDS Eigen3 tf 
+  DEPENDS tf 
 )
 
 ###########
