--- a/multi_robot_controller/package.xml
+++ b/multi_robot_controller/package.xml
@@ -58,13 +58,14 @@
   <build_depend>multi_robot_msgs</build_depend>  
   <build_depend>geometry_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
-
+  <depend>controller_interface</depend>
+  <depend>pluginlib</depend>
   <doc_depend>doxygen</doc_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
-
+    <controller_interface plugin="${prefix}/plugins.xml"/>
   </export>
+
 </package>
