--- a/transport_launcher/config/miranda_orientation_ff.yaml
+++ b/transport_launcher/config/miranda_orientation_ff.yaml
@@ -1,12 +1,13 @@
 update_rate: 20
 pose_topic: test_pose
 lookup_offset: true 
-off_source_frame: mir/base_link
-off_target_frame: panda/panda_link0
+off_source_frame: miranda/mir/base_link
+off_target_frame: miranda/panda/panda_link0
 lookup_initial_pose: true
-ee_source_frame: mir/base_link
-ee_target_frame: panda/panda_hand
+ee_source_frame: miranda/mir/base_link
+ee_target_frame: miranda/panda/panda_hand
 has_initial_orientation: true
-current_source_frame: mir/odom
-current_target_frame: mir/base_link
-ee_pose_frame: panda/panda_link0
+current_source_frame: master/base_link
+current_target_frame: miranda/mir/base_link
+ee_pose_frame: miranda/panda/panda_link0
+tf_prefix: ""
