--- a/transport_launcher/config/miranda_orientation_ff.yaml
+++ b/transport_launcher/config/miranda_orientation_ff.yaml
@@ -1,5 +1,5 @@
-update_rate: 20
-pose_topic: test_pose
+update_rate: 100
+pose_topic: equilibrium_pose
 lookup_offset: true 
 off_source_frame: miranda/mir/base_link
 off_target_frame: miranda/panda/panda_link0
