--- a/transport_launcher/config/miranda_orientation_ff.yaml
+++ b/transport_launcher/config/miranda_orientation_ff.yaml
@@ -7,7 +7,7 @@ lookup_initial_pose: true
 ee_source_frame: miranda/mir/base_link
 ee_target_frame: miranda/panda/panda_EE
 has_initial_orientation: true
-current_source_frame: miranda/mir/odom
+current_source_frame: master/base_link
 current_target_frame: miranda/mir/base_link
 ee_pose_frame: miranda/panda/panda_link0
 tf_prefix: ""
