--- a/transport_launcher/config/system_settings.yaml
+++ b/transport_launcher/config/system_settings.yaml
@@ -1,4 +1,9 @@
-base_namespaces: ["/mur/mir","/miranda/mir"]
-arm_namespaces: ["/mur/ur","/miranda/panda"]
-enable_manipulator: true
+# base_namespaces: ["/mur/mir","/miranda/mir"]
+# arm_namespaces: ["/mur/ur","/miranda/panda"]
+# enable_manipulator: true
+# enable_orientation_ff: true
+
+base_namespaces: ["/mur/mir"]
+arm_namespaces: ["/mur/ur"]
+enable_manipulator: false
 enable_orientation_ff: false
