--- a/transport_launcher/config/impedance_dyn.yaml
+++ b/transport_launcher/config/impedance_dyn.yaml
@@ -1,35 +1,43 @@
 !!python/object/new:dynamic_reconfigure.encoding.Config
 dictitems:
-  Dx: 2.0
-  Dy: 2.0
-  Dz: 2.0
-  Kx: 76.0
-  Ky: 76.0
-  Kz: 76.0
+  Dpitch: 0.2
+  Droll: 0.2
+  Dx: 0.3
+  Dy: 0.3
+  Dyaw: 0.2
+  Dz: 0.3
+  Kpitch: 100.0
+  Kroll: 100.0
+  Kx: 0.0
+  Ky: 0.0
+  Kyaw: 100.0
+  Kz: 1200.0
   groups: !!python/object/new:dynamic_reconfigure.encoding.Config
     dictitems:
-      Dx: 2.0
-      Dy: 2.0
-      Dz: 2.0
-      Kx: 76.0
-      Ky: 76.0
-      Kz: 76.0
+      Dpitch: 0.2
+      Droll: 0.2
+      Dx: 0.3
+      Dy: 0.3
+      Dyaw: 0.2
+      Dz: 0.3
+      Kpitch: 100.0
+      Kroll: 100.0
+      Kx: 0.0
+      Ky: 0.0
+      Kyaw: 100.0
+      Kz: 1200.0
       groups: !!python/object/new:dynamic_reconfigure.encoding.Config
         state: []
       id: 0
       name: Default
-      nullspace_damping: 13.0
-      nullspace_stiffness: 21.0
+      nullspace_damping: 0.0
+      nullspace_stiffness: 0.0
       parameters: !!python/object/new:dynamic_reconfigure.encoding.Config
         state: []
       parent: 0
-      rotational_damping: 0.3
-      rotational_stiffness: 0.3
       state: true
       type: ''
     state: []
-  nullspace_damping: 13.0
-  nullspace_stiffness: 21.0
-  rotational_damping: 0.3
-  rotational_stiffness: 0.3
+  nullspace_damping: 0.0
+  nullspace_stiffness: 0.0
 state: []
