--- a/transport_launcher/config/system_settings.yaml
+++ b/transport_launcher/config/system_settings.yaml
@@ -3,7 +3,12 @@
 # enable_manipulator: true
 # enable_orientation_ff: true
 
-base_namespaces: ["/mur/mir"]
-arm_namespaces: ["/mur/ur"]
-enable_manipulator: false
+# base_namespaces: ["/mur/mir"]
+# arm_namespaces: ["/mur/ur"]
+# enable_manipulator: false
+# enable_orientation_ff: false
+
+base_namespaces: ["/miranda/mir"]
+arm_namespaces: ["/miranda/panda"]
+enable_manipulator: true
 enable_orientation_ff: false
