--- a/multi_robot_controller/config/orientation_ff.yaml
+++ b/multi_robot_controller/config/orientation_ff.yaml
@@ -1,5 +1,5 @@
 update_rate: 100
-pose_topic: equilibrium_pose
+pose_topic: target_pose
 lookup_offset: true 
 off_source_frame: miranda/mir/base_link
 off_target_frame: miranda/panda/panda_link0
