Modified transport parmaetr

--- a/transport_launcher/config/miranda_orientation_ff_test.yaml
+++ b/transport_launcher/config/miranda_orientation_ff_test.yaml
@@ -1,4 +1,4 @@
-update_rate: 30
+update_rate: 100
 pose_topic: cartesian_impedance_controller/target_pose
 lookup_offset: true 
 off_source_frame: miranda/mir/base_link
@@ -7,7 +7,7 @@ lookup_initial_pose: true
 ee_source_frame: miranda/mir/base_link
 ee_target_frame: miranda/panda/panda_EE
 has_initial_orientation: true
-current_source_frame: master/base_link
+current_source_frame: miranda/mir/odom
 current_target_frame: miranda/mir/base_link
 ee_pose_frame: miranda/panda/panda_link0
 tf_prefix: ""
