--- a/transport_launcher/poses/mur_transport_poses.yaml
+++ b/transport_launcher/poses/mur_transport_poses.yaml
@@ -1,8 +1,8 @@
 drive:
-  elbow_joint: -1.396263
+  elbow_joint:  -1.570796326
   shoulder_lift_joint: -0.785398
   shoulder_pan_joint: 0.0
-  wrist_1_joint: -2.5307274153
+  wrist_1_joint: -2.36
   wrist_2_joint: 1.570796326
   wrist_3_joint: 0.0
 
@@ -12,4 +12,5 @@ grip:
   shoulder_pan_joint: 0
   wrist_1_joint: -1.570796326
   wrist_2_joint: 1.570796326
-  wrist_3_joint: 0.0
+  # wrist_3_joint: 0.0
+  wrist_3_joint: 0.75
