Changed system parameters

--- a/transport_launcher/poses/mur_transport_poses.yaml
+++ b/transport_launcher/poses/mur_transport_poses.yaml
@@ -12,5 +12,5 @@ grip:
   shoulder_pan_joint: 0
   wrist_1_joint: -1.570796326
   wrist_2_joint: 1.570796326
-  # wrist_3_joint: 0.0
-  wrist_3_joint: 0.75
+  wrist_3_joint: 1.570796326
+  #wrist_3_joint: 0.75
