reused miranda system for murianda

--- a/transport_launcher/config/system_settings.yaml
+++ b/transport_launcher/config/system_settings.yaml
@@ -3,6 +3,12 @@ arm_namespaces: ["/mur/ur","/miranda/panda"]
 enable_manipulator: true
 enable_orientation_ff: false
 
+base_namespaces: ["/murianda/mir","/miranda/mir"]
+arm_namespaces: ["/murianda/panda","/miranda/panda"]
+enable_manipulator: true
+enable_orientation_ff: false
+
+
 # base_namespaces: ["/mur/mir"]
 # arm_namespaces: ["/mur/ur"]
 # enable_manipulator: true
