--- a/transport_launcher/poses/murianda_transport_poses.yaml
+++ b/transport_launcher/poses/murianda_transport_poses.yaml
@@ -1,20 +1,18 @@
 drive:
-  panda_joint1:  0.0
+  panda_joint1: 0.0
   panda_joint2: -1.57
   panda_joint3: 0.0
   panda_joint4: -2.35619
   panda_joint5: 0
   panda_joint6: 0.78
   panda_joint7: 0.78
-
+  
 grip:
   panda_joint1: 0.0
-  panda_joint2: 0.29
+  panda_joint2: 0.3735469071219424
   panda_joint3: 0.0
-  panda_joint4: -1.83
+  panda_joint4: -2.144559895364862
   panda_joint5: 0.0
-  panda_joint6: 2.08
-  panda_joint7: -0.78
+  panda_joint6: 2.5191509624057344
+  panda_joint7: -0.785398163
 
-
- 
