Modified parameters for experiments

--- a/transport_launcher/experiments/ex_front_back/murianda_transport_poses.yaml
+++ b/transport_launcher/experiments/ex_front_back/murianda_transport_poses.yaml
@@ -17,4 +17,4 @@ grip:
   panda_joint4: -2.0521
   panda_joint5: -0.0065
   panda_joint6: 1.1995
-  panda_joint7: -1.25
+  panda_joint7: 0.320796327
