--- a/multi_robot_controller/config/orientation_ff.yaml
+++ b/multi_robot_controller/config/orientation_ff.yaml
@@ -5,8 +5,8 @@ off_source_frame: miranda/mir/base_link
 off_target_frame: miranda/panda/panda_link0
 lookup_initial_pose: true
 ee_source_frame: miranda/mir/base_link
-ee_target_frame: miranda/panda/panda_hand
-has_initial_orientation: true
+ee_target_frame: miranda/panda/panda_EE
+has_initial_orientation: false
 current_source_frame: master/base_link
 current_target_frame: miranda/mir/base_link
 ee_pose_frame: miranda/panda/panda_link0
