Seperated twist and twist stamped input

--- a/multi_robot_controller/CMakeLists.txt
+++ b/multi_robot_controller/CMakeLists.txt
@@ -227,6 +227,8 @@ add_library(input
   ${INPUT_INCLUDE_PATH}/input_odom.hpp
   ${INPUT_INCLUDE_PATH}/input_pose_twist.hpp
   ${INPUT_INCLUDE_PATH}/input_pose_twist_local.hpp
+  ${INPUT_INCLUDE_PATH}/input_pose_twist_stamped.hpp
+  ${INPUT_INCLUDE_PATH}/input_pose_twist_stamped_local.hpp
   ${INPUT_INCLUDE_PATH}/input_pose_odom.hpp
   ${INPUT_INCLUDE_PATH}/input_types.hpp
 )
