--- a/transport_launcher/config/controllers.yaml
+++ b/transport_launcher/config/controllers.yaml
@@ -35,6 +35,7 @@ franka_state_controller:
 
 cartesian_controller: *pjc
 
+#IROS
 compliance_controller:
   type: panda_controllers_extended/SixDofCartesianImpedanceFixedJointController
   arm_id: panda
@@ -50,3 +51,18 @@ compliance_controller:
   joint_damping: 39
   rate: 400
   enable_accelaration: false
+
+#Master thesis Heinrich
+# compliance_controller:
+#   type: panda_controllers_extended/SixDofCartesianImpedanceController
+#   arm_id: panda
+#   joint_names_impedance: 
+#     - panda_joint1
+#     - panda_joint2
+#     - panda_joint3
+#     - panda_joint4
+#     - panda_joint5
+#     - panda_joint6
+#   joint_name_free: panda_joint7
+#   rate: 400
+#   enable_accelaration: false
